--- a/LoginZad/src/main/res/layout/fragment_wallet.xml
+++ b/LoginZad/src/main/res/layout/fragment_wallet.xml
@@ -1,33 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Sesion.DashBoard"
-    android:background="@color/bgPrimary">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".WalletFragment">
 
+    <!-- TODO: Meter contenido -->
 
     <TextView
-        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/montserratbold"
-        android:text="BIENVENID@"
-        android:textColor="@color/white"
-        android:textSize="24dp"
+        android:layout_centerInParent="true"
+        android:text="Cartera Fragment"
+        android:textColor="@color/lavender"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.169" />
 
     <Button
-        android:id="@+id/btnSalir"
+        android:id="@+id/wallet_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
-        android:text="Salir"
+        android:layout_gravity="center"
+        android:text="Mostrar Cartera"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.303" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
