--- a/LoginZad/src/main/res/layout/fragment_profile.xml
+++ b/LoginZad/src/main/res/layout/fragment_profile.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".ProfileFragment">
 
-    <!-- TODO: Meter contenido -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -14,5 +13,7 @@
         android:textSize="30sp"
         android:layout_centerInParent="true"
         android:textColor="@color/lavender"/>
+
+    <include layout="@layout/perfil" />
 
 </RelativeLayout>
