--- a/LoginZad/src/main/res/layout/fragment_profile.xml
+++ b/LoginZad/src/main/res/layout/fragment_profile.xml
@@ -14,5 +14,6 @@
         android:textSize="30sp"
         android:layout_centerInParent="true"
         android:textColor="@color/lavender"/>
+    <include layout="@layout/perfil" />
 
 </RelativeLayout>
