--- a/LoginZad/src/main/res/layout/fragment_wallet.xml
+++ b/LoginZad/src/main/res/layout/fragment_wallet.xml
@@ -6,6 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".WalletFragment">
 
+    <!-- TODO: PROBANDO COSITAS GIT -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
