--- a/LoginZad/src/main/res/layout/perfil.xml
+++ b/LoginZad/src/main/res/layout/perfil.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#8692f7"
-    tools:context=".Perfil">
+    tools:context=".Ventanas.Perfil">
 
     <ImageView
         android:id="@+id/imageView"
