--- a/LoginZad/src/main/res/layout/fragment_shops.xml
+++ b/LoginZad/src/main/res/layout/fragment_shops.xml
@@ -1,21 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <SearchView
-        android:id="@+id/searchView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:queryHint="Buscar supermercado..."/>
-    <!---app:iconifiedByDefault="true"/>-->
-
 <androidx.recyclerview.widget.RecyclerView
-    android:id="@+id/recyclerView"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/recycler_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+    android:layout_height="match_parent" >
 
-
-</LinearLayout>
+</androidx.recyclerview.widget.RecyclerView>
