--- a/LoginZad/src/main/res/layout/item_shop.xml
+++ b/LoginZad/src/main/res/layout/item_shop.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -8,17 +7,17 @@
 
     <ImageView
         android:id="@+id/image_foto"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/mercadona" />
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:scaleType="centerCrop" />
 
     <TextView
         android:id="@+id/text_nombre"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="16sp" />
+        android:layout_gravity="center_vertical"
+        android:layout_marginStart="16dp"
+        android:textAppearance="?android:textAppearanceMedium" />
 
 </LinearLayout>
 
