--- a/LoginZad/src/main/res/layout/perfil.xml
+++ b/LoginZad/src/main/res/layout/perfil.xml
@@ -5,8 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#8692f7"
-    tools:context=".Ventanas.Perfil">
+    android:background="#8692f7">
 
     <ImageView
         android:id="@+id/imageView"
