Wallet Fragment Boton Mostrar saldo

--- a/LoginZad/src/main/res/layout/fragment_wallet.xml
+++ b/LoginZad/src/main/res/layout/fragment_wallet.xml
@@ -4,15 +4,60 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".WalletFragment">
 
     <!-- TODO: Meter contenido -->
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cartera Fragment"
-        android:textSize="30sp"
-        android:layout_centerInParent="true"
-        android:textColor="@color/lavender"/>
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="155dp"
+        android:layout_marginTop="286dp"
+        android:layout_marginEnd="157dp"
+        android:layout_marginBottom="405dp"
+        android:text="Cartera"
+        android:textColor="@color/lavender"
+        android:textSize="30sp" />
+
+    <TextView
+        android:layout_width="278dp"
+        android:layout_height="78dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="81dp"
+        android:layout_marginTop="170dp"
+        android:layout_marginEnd="52dp"
+        android:layout_marginBottom="483dp"
+        android:text="Aquí puedes consultar el saldo disponible de tu cartera en la aplicación"
+        android:textColor="@color/black"
+        android:textSize="18sp" />
+
+    <Button
+        android:id="@+id/wallet_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="center"
+        android:layout_marginStart="114dp"
+        android:layout_marginTop="336dp"
+        android:layout_marginEnd="115dp"
+        android:layout_marginBottom="347dp"
+        android:text="Mostrar saldo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.303" />
 
 </RelativeLayout>
