wallet implementada y perfil hecho

--- a/LoginZad/src/main/res/layout/perfil.xml
+++ b/LoginZad/src/main/res/layout/perfil.xml
@@ -21,7 +21,7 @@
         app:layout_constraintVertical_bias="0.176" />
 
     <TextView
-        android:id="@+id/NombreUser"
+        android:id="@+id/Nombre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
@@ -35,7 +35,7 @@
         app:layout_constraintTop_toBottomOf="@id/imageView" />
 
     <TextView
-        android:id="@+id/CorreoUser"
+        android:id="@+id/Correo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
@@ -45,10 +45,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/NombreUser" />
+        app:layout_constraintTop_toBottomOf="@id/Nombre" />
 
     <TextView
-        android:id="@+id/PassUser"
+        android:id="@+id/Contraseña"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
@@ -58,7 +58,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/CorreoUser" />
+        app:layout_constraintTop_toBottomOf="@id/Correo" />
 
     <Button
         android:id="@+id/myButton"
